patientcare-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: project3-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: project3
spec:
  hosts:
  - "*"
  gateways:
  - project3-gateway
  http:
  - match:
    - uri:
        exact: /getgreeting
    route:
    - destination:
        host: project3
        port:
          number: 8080
