project2-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: project2-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: project2
spec:
  hosts:
  - "*"
  gateways:
  - project2-gateway
  http:
  - match:
    - uri:
        exact: /getgreeting
    route:
    - destination:
        host: project2
        port:
          number: 80
